<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/futura_medium_c"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/my_pocket" />

    <TextView
        android:id="@+id/settings_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        app:helperText="@string/e_mail"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp"
        tools:text="E-mail : baranoffs.life@gmail.com" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_change_password"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_email" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@+id/button_change_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete_account"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/delete_account"
        app:layout_constraintTop_toBottomOf="@+id/button_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>